--- a/language-configuration.json
+++ b/language-configuration.json
@@ -1,15 +1,12 @@
 {
   "comments": {
-    "blockComment": ["<!--", "-->"]
+    "lineComment": "#"
   },
   "brackets": [
-    ["<!--", "-->"],
-    ["<%", "%>"],
     ["<:", ":>"],
     ["{", "}"],
     ["[", "]"],
-    ["(", ")"],
-    ["<", ">"]
+    ["(", ")"]
   ],
   "autoClosingPairs": [
     { "open": "{", "close": "}" },
@@ -17,10 +14,7 @@
     { "open": "(", "close": ")" },
     { "open": "'", "close": "'", "notIn": ["string", "comment"] },
     { "open": "\"", "close": "\"", "notIn": ["string"] },
-    { "open": "<!--", "close": "-->", "notIn": ["comment", "string"] },
-    { "open": "<%", "close": "%>", "notIn": ["comment", "string"] },
-    { "open": "<:", "close": ":>", "notIn": ["comment", "string"] },
-    { "open": "<", "close": ">", "notIn": ["comment", "string"] }
+    { "open": "<:", "close": ":>", "notIn": ["comment", "string"] }
   ],
   "surroundingPairs": [
     { "open": "'", "close": "'" },
@@ -28,17 +22,17 @@
     { "open": "{", "close": "}" },
     { "open": "[", "close": "]" },
     { "open": "(", "close": ")" },
-    { "open": "<", "close": ">" }
+    { "open": "<:", "close": ":>" }
   ],
   "folding": {
     "markers": {
-      "start": "^\\s*(<!--\\s*#region\\b.*-->|<:\\s*(?:block|for|if|while)\\b)",
-      "end": "^\\s*(<!--\\s*#endregion\\b.*-->|<:\\s*/\\s*(?:block|for|if|while)\\s*:>)"
+      "start": "^\\s*(:)\\s*(if|elsif|else|unless|for|while|given|when|block|macro)\\b|<:\\s*(if|elsif|else|unless|for|while|given|when|block|macro)\\b",
+      "end": "^\\s*(:)\\s*(end)\\b|<:\\s*(end)\\b\\s*:>"
     }
   },
   "indentationRules": {
-    "increaseIndentPattern": "<(?!\\?|(?:area|base|br|col|frame|hr|html|img|input|keygen|link|menuitem|meta|param|source|track|wbr)\\b|[^>]*/>)([-_\\.A-Za-z0-9]+)(?=\\s|>)\\b[^>]*>(?!</\\1>)|<!--(?!.*-->)|\\{[^}\"']*$|<:.*(?:block|for|if|while|else)\\b",
-    "decreaseIndentPattern": "^\\s*(</[-_\\.A-Za-z0-9]+\\b[^>]*>|-?-->|\\}|<:\\s*/)"
+    "increaseIndentPattern": "^\\s*(:)\\s*(if|elsif|else|unless|for|while|given|when|block|macro)\\b|<:\\s*(if|elsif|else|unless|for|while|given|when|block|macro)\\b|\\{\\s*$",
+    "decreaseIndentPattern": "^\\s*(:)\\s*(end|elsif|else|when|default)\\b|<:\\s*(end|elsif|else|when|default)\\b|^\\s*\\}"
   },
-  "wordPattern": "(-?\\d*\\.\\d\\w*)|([^\\`\\~\\!\\@\\$\\^\\&\\*\\(\\)\\=\\+\\[\\{\\]\\}\\\\\\|\\;\\:\\'\\\"\\,\\.\\<\\>\\/\\s]+)"
+  "wordPattern": "(-?\\d*\\.\\d\\w*)|([^\\`\\~\\!\\@\\#\\$\\^\\&\\*\\(\\)\\-\\=\\+\\[\\{\\]\\}\\\\\\|\\;\\:\\'\\\"\\,\\.\\<\\>\\/\\?\\s]+)"
 }
