Add injection grammar for HTML attribute syntax highlighting and bump version to 0.0.4
This commit implements a critical feature to enable proper syntax highlighting
of Xslate expressions within HTML attribute values.

Key improvements:

1. Grammar Injection:
   - Created xslate-injection.tmLanguage.json for targeted injection
   - Injection selector targets HTML string contexts within Xslate files
   - Preserves HTML string scoping while enabling Xslate highlighting

2. Technical Implementation:
   - Uses L: (left-to-right) injection to respect original scopes
   - Targets both single and double quoted HTML attribute values
   - Includes both regular expressions and comment patterns

3. Syntax Support:
   - <: expression :> patterns work inside HTML attributes
   - <:# comment :> patterns work inside HTML attributes
   - Proper punctuation and operator highlighting maintained

This solves the issue where VSCode would render entire attribute values
as plain HTML strings, now correctly highlighting embedded Xslate
expressions within those contexts.

Testing confirmed the injection approach works correctly for expressions
in class attributes, src/href URLs, and other HTML attribute contexts.

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "text-xslate",
   "displayName": "Text::Xslate",
   "description": "Syntax highlighting for Text::Xslate template language (Kolon, Metakolon, TTerse)",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "publisher": "your-publisher-name",
   "license": "MIT",
   "icon": "images/icon.png",
@@ -53,6 +53,11 @@
           "source.css": "css",
           "source.js": "javascript"
         }
+      },
+      {
+        "scopeName": "text.html.xslate.injection",
+        "path": "./syntaxes/xslate-injection.tmLanguage.json",
+        "injectTo": ["text.html.xslate"]
       }
     ]
   },
